﻿NeteXt'73 Changelog
-------------------------------------

v0.9.20
-	usunięcie instalatora starych wersji kerneli premium
-	dodanie instalatora kerneli skylake
-	dostosowanie modułu sprawdzania zainstalowanych kerneli do nowych wersji
v0.9.19
-	zmiana zależności dla nowych sterowników nvidia
v0.9.18
-	automatyzacja deinstalacji kerneli
v0.9.17
-	dodanie aktualnego klucza GPG do instalatora spotify
-	usunięcie repo bumblebee
-	usunięcie autoremove
v0.9.16
-	zmiana sposobu instalacji sterowników NV
v0.9.15
-	zmiana sposobu sprawdzania czy jest optimus
v0.9.14
-	instalator optimusa
-	dodanie opcji primusrun dla aplikacji w menu
-	dodanie opcji primusrun dla aplikacji na pulpicie
-	Optimus Steam Fix
-	Logi primus opengl
v0.9.13
-	automatyczne zamknięcie xterm przy backupie gruba
-	odwrócenie oznaczeń vsync
-	poprawka zmiennych
v0.9.12
-	dodanie do APM opcji vsync
-	poprawki w instalatorze repo
v0.9.11
-	dodanie sprawdzania starych kerneli w o Netext'73
v0.9.10
-	dodanie repozytorium virtualbox 5.0
-	dodanie do zależności ibus
-	dodanie repozytorium kadu
-	dodanie instalatora WhatsApp-Desktop
v0.9.09
-	zmiana ikon kerneli i microcode
v0.9.08
-	zmiana loga programu
v0.9.07
-	przywrócenie menu tabeli testów pamięci
-	przebudowa kontaktów
v0.9.06
-	zmiana ikon
-	poprawki skalowania okien dla HiDPI
v0.9.05
-	poprawki tłumaczeń
-	zmniejszenie okna logów
v0.9.04
-	naprawa automatycznego instalowania kerneli
-	szczegółowe opisy kerneli premium w dymkach-angielski
v0.9.03
-	wyłączenie języka francuskiego
v0.9.02
-	szczegółowe opisy kerneli premium w dymkach
v0.9.01
-	modyfikacja sekcji GRUB usunięcie spejalnych ustawień dla iCorów
v0.9.00
-	zatwierdzenie zmian
v0.8.97
-	poprawki w deinstalatorze kerneli
-	dostosowanie instalatora kerneli do nowych nazw
v0.8.96
-	zmiana wyglądu listy usuwanych kerneli
-	deinstalator kerneli tylko do kerneli ext73 z uwagi na zależności
v0.8.95
-	przyspieszenie generowania listy kerneli do usunięcia
v0.8.94
-	zmiana deinstalatora kerneli
v0.8.93