@@ -5,6 +5,7 @@ v0.9.20
 -	usunięcie instalatora starych wersji kerneli premium
 -	dodanie instalatora kerneli skylake
 -	dostosowanie modułu sprawdzania zainstalowanych kerneli do nowych wersji
+-	dostosowanie pliku makefile
 v0.9.19
 -	zmiana zależności dla nowych sterowników nvidia
 v0.9.18
